# odoopod

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml
odoopod-cli/: Cargo.toml
odoopod-cli/src/: main.rs
odoopod-core/: Cargo.toml
odoopod-core/src/: error.rs  instance.rs  lib.rs
odoopod-core/src/components/: mod.rs  odoo.rs  postgres.rs  uv.rs
test2/: odoo.conf
test3/: odoo  odoo.conf
