[workspace]
members  = ["odoopod-core", "odoopod-cli"]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1",    features = ["full"] }
reqwest    = { version = "0.12", features = ["stream", "json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
hex        = "0.4"
flate2     = "1"
tar        = "0.4"
dirs       = "5"
thiserror  = "1"
async-trait = "0.1"
futures    = "0.3"
tracing    = "0.1"
