[package]
name = "odoopod-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
flate2      = { workspace = true }
tar         = { workspace = true }
dirs        = { workspace = true }
thiserror   = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
chrono = { version = "0.4.44", features = ["serde"] }
toml = "1.0.3"
bytes = "1.11.1"
anyhow = "1.0.102"
zstd = "0.13.3"
serde_yaml = "0.9.34"
pg-embed = "1.0.0"
